# llmrc

./: .gitignore  README.md  build.sh  build_ubuntu.sh  cbindgen.toml  models.json  models.json.validation  run.sh
cpp-app/: CMakeLists.txt
cpp-app/include/: cmd_args.h  ename.c.inc  llm_rust.h  log_cpp.h  rust_utils.h
cpp-app/src/: hello.cpp  main.cpp
rustlib/: Cargo.toml
rustlib/common/: log.rs  mod.rs  model.rs  utils.rs
rustlib/engine/: engine.rs  engine_.rs  mod.rs
rustlib/llmrust/: librust.rs  llama_model_loader.rs  llmrust.rs
rustlib/llmrust/common/: arg.rs  base64.rs  build_info.rs  chat.rs  chat_parser.rs  common.rs  console.rs  file_utils.rs  json_partial.rs  json_schema_to_grammar.rs  log.rs  memory_map.rs  mod.rs  ngram_cache.rs  quantization.rs  regex_partial.rs  sampling.rs  speculative.rs  vocab_loader.rs
rustlib/llmrust/examples/: mod.rs
rustlib/llmrust/examples/batched/: main.rs
rustlib/llmrust/examples/embedding/: main.rs
rustlib/llmrust/examples/gguf/: main.rs
rustlib/llmrust/examples/main/: main.rs
rustlib/llmrust/examples/perplexity/: main.rs
rustlib/llmrust/examples/quantize/: main.rs
rustlib/llmrust/examples/server/: main.rs
rustlib/llmrust/examples/simple/: main.rs
rustlib/llmrust/ggml/include/: ggml.rs  ggml_alloc.rs  ggml_backend.rs  ggml_blas.rs  ggml_cpu.rs  ggml_cuda.rs  ggml_metal.rs  ggml_opencl.rs  ggml_vulkan.rs  ggml_webgpu.rs  gguf.rs  mod.rs
rustlib/llmrust/ggml/src/: ggml.rs  ggml_alloc.rs  ggml_backend.rs  ggml_backend_impl.rs  ggml_common.rs  ggml_impl.rs  ggml_quants.rs  ggml_threading.rs  gguf.rs  mod.rs
rustlib/llmrust/ggml/src/ggml-cpu/: binary_ops.rs  ggml_cpu.rs  mod.rs  ops.rs  quants.rs  repack.rs  traits.rs  unary_ops.rs  vec.rs
rustlib/llmrust/gguf/: constants.rs  gguf.rs  gguf_constants.rs  gguf_reader.rs  gguf_types.rs  gguf_writer.rs  lazy.rs  metadata.rs  mod.rs  quants.rs  tensor_mapping.rs  utility.rs  vocab.rs
rustlib/llmrust/grammars/: arithmetic.rs  c.rs  chess.rs  english.rs  japanese.rs  json.rs  json_arr.rs  list.rs  mod.rs
rustlib/llmrust/models/: mod.rs  templates.rs  vocab_loader.rs
rustlib/llmrust/src/: adapter_loader.rs  batch_processor.rs  kv_cache.rs  llama.rs  llama_adapter.rs  llama_arch.rs  llama_batch.rs  llama_chat.rs  llama_context.rs  llama_cparams.rs  llama_grammar.rs  llama_graph.rs  llama_hparams.rs  llama_impl.rs  llama_io.rs  llama_kv_cache.rs  llama_memory.rs  llama_mmap.rs  llama_model.rs  llama_model_loader.rs  llama_quant.rs  llama_sampling.rs  llama_vocab.rs  mod.rs  model_loader.rs  sampling.rs  tensor_loader.rs  unicode.rs
rustlib/llmrust/tests/: mod.rs  test_backend.rs  test_gguf.rs  test_grammar.rs  test_quantize.rs  test_rope.rs  test_sampling.rs  test_tokenizer.rs
rustlib/llmrust/tools/: mod.rs
rustlib/llmrust/tools/gguf_split/: main.rs
rustlib/llmrust/tools/imatrix/: main.rs
rustlib/llmrust/tools/llama_bench/: main.rs
rustlib/llmrust/tools/tokenize/: main.rs
rustlib/src/: lib.rs  rust_llm.rs
