[package]
name = "llm_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"  # C FFI Library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"
